package patterns.creational;

public class AbastractFactory {}
