@startuml

title __CREATIONAL's Class Diagram__\n

  namespace patterns.creational {
    class patterns.creational.AbastractFactory {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.Builder {
    }
  }
  

  namespace patterns.creational {
    abstract class patterns.creational.Factory {
        {abstract} + createProduct()
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.FactoryDemo {
        {static} + main()
    }
  }
  

  namespace patterns.creational {
    abstract class patterns.creational.Product {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.Prototype {
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.SingletonDemo {
        {static} - instance : SingletonDemo
        {static} + getInstance()
        - SingletonDemo()
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.cFactory {
        + createProduct()
    }
  }
  

  namespace patterns.creational {
    class patterns.creational.cProduct {
        ~ cProduct()
    }
  }
  

  patterns.creational.cFactory -up-|> patterns.creational.Factory
  patterns.creational.cProduct -up-|> patterns.creational.Product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
